@@ -5,6 +5,7 @@
 	
 2008-01-25  David Bateman  <dbateman@free.fr>
 
+	* general/__splinen__.m: Treat mixed orientation vectors.
 	* plot/__scatter__.m: Remove NaN values from data.
 	* plot/__patch__.m: Vectorize treatment of trailing NaN values.
 
